--- a/packages.yml
+++ b/packages.yml
@@ -1,7 +1,7 @@
 packages:
 
   - package: elementary-data/elementary
-    version: 0.16.0
+    version: 0.16.2
     ## Docs: https://docs.elementary-data.com
 
   - package: dbt-labs/dbt_utils
@@ -9,3 +9,6 @@ packages:
  
   - git: "https://github.com/techonomydev/techonomy-dbt-utils.git"
     revision: "v1.1.0"
+
+  - package: dbt-labs/codegen
+    version: 0.13.1
