--- a/snowflake_profiles.yml
+++ b/snowflake_profiles.yml
@@ -3,7 +3,7 @@ common_config: &common_config
   account: <your_account>
   user: <your_username>
   password: <your_password>
-  authenticator: username_password_mfa | externalbrowser (indien sso gebruik externalbrowser, verwijder password)
+  authenticator: <username_password_mfa | externalbrowser (indien sso gebruik externalbrowser, verwijder password)>
   role: <your_role>
   database: <your_database>
   warehouse: <your_warehouse>
