--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"dbt-<bigquery/snowflake>" = "1.9.*"
+"dbt-snowflake" = "1.9.*"
 elementary-data = "0.16.1"
 
 [dev-packages]
 shandy-sqlfmt = {extras = ["jinjafmt"], version = "*"}
+sqlfluff-templater-dbt = "*"
 
 
 [requires]
