--- a/packages.yml
+++ b/packages.yml
@@ -7,8 +7,8 @@ packages:
   - package: dbt-labs/dbt_utils
     version: 1.1.1
  
-  - git: "https://github.com/techonomydev/techonomy-dbt-utils.git"
-    revision: "v1.1.0"
+  # - git: "https://github.com/techonomydev/techonomy-dbt-utils.git"
+  #   revision: "v1.1.0"
 
   - package: dbt-labs/codegen
     version: 0.13.1
